--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 atomicwrites==1.3.0
 attrs==18.2.0
+Click==7.0
+Flask==1.0.2
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.1
 more-itertools==6.0.0
 pluggy==0.9.0
 py==1.8.0
 pytest==4.3.0
 six==1.12.0
+Werkzeug==0.15.1
 yapf==0.26.0
