--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
 atomicwrites==1.3.0
 attrs==18.2.0
+backcall==0.1.0
 Click==7.0
+decorator==4.4.0
 Flask==1.0.2
+ipython==6.5.0
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.13.3
 Jinja2==2.10
 MarkupSafe==1.1.1
 more-itertools==6.0.0
+parso==0.3.4
+pexpect==4.6.0
+pickleshare==0.7.5
 pluggy==0.9.0
+prompt-toolkit==1.0.15
+ptyprocess==0.6.0
 py==1.8.0
+Pygments==2.3.1
 pytest==4.3.0
+simplegeneric==0.8.1
 six==1.12.0
+traitlets==4.3.2
+wcwidth==0.1.7
 Werkzeug==0.15.1
 yapf==0.26.0
