--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ backcall==0.1.0
 Click==7.0
 decorator==4.4.0
 Flask==1.0.2
+Flask-Cors==3.0.7
 ipython==6.5.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
