--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 atomicwrites==1.3.0
 attrs==18.2.0
 backcall==0.1.0
+certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
 decorator==4.4.0
 Flask==1.0.2
 Flask-Cors==3.0.7
+idna==2.8
 ipython==6.5.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
@@ -21,9 +24,11 @@ ptyprocess==0.6.0
 py==1.8.0
 Pygments==2.3.1
 pytest==4.3.0
+requests==2.21.0
 simplegeneric==0.8.1
 six==1.12.0
 traitlets==4.3.2
+urllib3==1.24.1
 wcwidth==0.1.7
 Werkzeug==0.15.1
 WTForms==2.2.1
