--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,8 @@ backcall==0.1.0
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
+codecov==2.0.15
+coverage==4.5.3
 decorator==4.4.0
 Flask==1.0.2
 Flask-Cors==3.0.7
@@ -24,6 +26,7 @@ ptyprocess==0.6.0
 py==1.8.0
 Pygments==2.3.1
 pytest==4.3.0
+pytest-cov==2.7.1
 requests==2.21.0
 simplegeneric==0.8.1
 six==1.12.0
